[package]
name = "lending_thread_pool"
version = "0.1.0"
edition = "2021"
authors = ["Carlo Dell'Acqua <carlo.dellacqua97@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-test = "0.2.5"

[dev-dependencies]
indicatif = "0.17.9"
num_cpus = "1.16.0"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"
